--- a/webproj/app/templates/comment.html
+++ b/webproj/app/templates/comment.html
@@ -44,7 +44,8 @@
                                     {% csrf_token %}
                                     <input type="hidden" name="form-type" value="delete-form" />
                                     <input type="hidden" name="commentID" value="{{ comment.2 }}">
-                                    <button type="submit" class="btn btn-danger btn-xs" aria-label="Left Align" onclick="return confirm('Are you sure you want to delete this comment?')">
+                                    <button type="submit" class="btn btn-danger btn-xs" aria-label="Left Align"
+                                            onclick="return confirm('Are you sure you want to delete this comment?')">
                                         <span class="glyphicon glyphicon-remove"></span> Remove
                                     </button>
                                 </form>
